# ROS_BlueROV2

./: .bash_ros  .gitignore  .gitmodules  Install_ROS.md  README.md  ROSLocalScript  ROSTopsideScript
Doc/: Config_Arduino.md  Config_BlueROV2_Repo.md  Get_Repository.md  Install_ROS.md  SetupInternetSharing.md
src/aau_Jannic_betty/Testarduinocode/: Testarduinocode.ino
src/aau_black_betty/sketch_feb25a/: sketch_feb25a.ino
src/aau_syrinx_dvl/: CMakeLists.txt  README.md  package.xml
src/aau_syrinx_dvl/msg/: DVL.msg  DVLBeam.msg
src/aau_syrinx_dvl/scripts/: dvl_tcp.py
src/aau_waterlinked_dvl/: CMakeLists.txt  README.md  package.xml
src/aau_waterlinked_dvl/msg/: DVL_Serial.msg
src/aau_waterlinked_dvl/scripts/: dvl_serial.py  dvl_tcp.py
src/aau_waterlinked_sbl/: CMakeLists.txt  README.md  package.xml
src/aau_waterlinked_sbl/scripts/: waterlinked_sbl_node.py
src/bluerov2_arduino/: CMakeLists.txt  package.xml
src/bluerov2_bringup/launch/: bluerov2_bringup.launch
src/bluerov2_brinup/: CMakeLists.txt  package.xml
src/bluerov2_brinup/launch/: bluerov2_bringup.launch  bluerov2_bringup_old.launch  bluerov2_bringupchanged.launch
src/bluerov2_launch_example/: CMakeLists.txt  package.xml
src/bluerov2_ms5837/: CMakeLists.txt  README.md  package.xml
src/bluerov2_teleop/: CMakeLists.txt  package.xml
src/bluerov2_thruster/: CMakeLists.txt  README.md  package.xml  thruster_manager_generator.asv  thruster_manager_generator.m
src/bluerov2_tm200/: CMakeLists.txt  package.xml
src/example_package/: CMakeLists.txt  README.md  package.xml
(+50 files in other folders)
