<?xml version="1.0"?>
<package format="2">
  <name>aau_waterlinked_sbl</name>
  <version>0.0.1</version>
  <description>ROS Driver for the Waterlinked Underwater GPS</description>

  <maintainer email="ffso@energy.aau.dk">Fredrik Sørensen</maintainer>
    
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
</package>
